src/objects/Service_Catalog_TPG_s__c.object
<CustomObject>
    <fields>
        <fullName>Catalog_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Entry</label>
        <referenceTo>Service_Catalog_Entry__c</referenceTo>
        <relationshipLabel>Service Catalog TPG’s</relationshipLabel>
        <relationshipName>Service_Catalog_TPG_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TPG_Listing_Document__c</fullName>
        <formula>HYPERLINK(&quot;https://aecom--npssurvey--c.cs7.content.force.com/servlet/servlet.FileDownload?file=015M0000000d3PI&quot;, &quot;This is the TPG glossary&quot;,&quot;_blank&quot;)</formula>
        <label>TPG Listing Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPG_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TPG Name</label>
        <referenceTo>TPG_Link_Database__c</referenceTo>
        <relationshipLabel>Service Catalog TPG’s</relationshipLabel>
        <relationshipName>Service_Catalog_TPG_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TPG_Web_Link__c</fullName>
        <formula>HYPERLINK(TPG_Name__r.TPG_Web_Link__c, TPG_Name__r.Name &amp; &quot; &quot; &amp; &quot;TPG&quot; &amp; &quot; &quot; &amp; &quot;Website&quot;, &quot;_blank&quot;)</formula>
        <label>TPG Web Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPG__c</fullName>
        <label>TPG List</label>
        <picklist>
            <picklistValues>
                <fullName>Acoustics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytical Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biosolids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brownfields and Site Redevelopment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Remediation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Change &amp; Resilience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coal Combustion Products Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coastal &amp; Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined Heat &amp; Power (CHP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Engagement &amp; Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contaminated Sediments &amp; Waterway Restoration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost and Value Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Estimating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural Heritage Planning &amp; Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dams and Hydropower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution &amp; Collection Systems</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TPG_display__c</fullName>
        <formula>TPG_Name__r.Name</formula>
        <label>TPG Name</label>
        <type>Text</type>
    </fields>
    <label>Service Catalog TPG’s</label>
    <listViews>
        <fullName>All_TPG_s</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All TPG&apos;s</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TPG- {0}</displayFormat>
        <label>Service Catalog TPG’s Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Catalog TPG’s</pluralLabel>
    <recordTypes>
        <fullName>Service_Catalog_TPG_Record</fullName>
        <active>true</active>
        <label>Service Catalog TPG Record</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>